--- a/web-site/main.css
+++ b/web-site/main.css
@@ -1,5 +1,6 @@
 body {
-	background: url(backgrounds/walpTop.png) no-repeat fixed;
+	background: url(backgrounds/walpTop.jpg) repeat scroll;
+	background-size: 100%;
 }
 
 .panel {
@@ -19,11 +20,48 @@ body {
   	.panel {
    	 	width: 30%;
  	}
+	.relative-form {
+		width: 30%;
+	}
+	.container {
+		width: 80%;
+		margin: auto;
+	}
+	.hm-btn {
+		margin-right: 20px;
+	}
+	.mobile {
+		display: none;
+	}
+  	.leftPane {
+	border-right: solid thin grey;
+	}
 }
 
 @media (max-width: 767px) {
 	.panel {
 		width: 80%;
+	}
+	.relative-group {
+		width: 80%;
+		margin: auto;
+	}
+	.container {
+		width: 100%;
+		padding: none;
+	}
+	.breadcrumb {
+	border-radius: 0px;
+	}
+	.hm-btn {
+		margin: 20px 0px;
+		width: 100%;
+	}
+	.desktop {
+		display: none;
+	}
+	.sm-row {
+		border-bottom: solid thin grey;
 	}
 }
 
@@ -38,3 +76,57 @@ body {
 .top {
 	margin-top: 5%;
 }
+
+.container-big {
+	padding: 0px;
+}
+
+.breadcrumb {
+	padding-top: 15px;
+	padding-bottom: 15px;
+	border-radius: 0px;
+}
+
+.container-fluid {
+	padding: 0 !important;
+}
+
+.center-panel > .container {
+	width: 100%;
+	min-height: 500px;
+	background: #f5f5f5 none no-repeat fixed border-box;
+	padding: 10px 25px;
+}
+
+.footer {
+	background-color: #f5f5f5;
+	margin-top: 20px;
+	padding: 10px;
+}
+
+.footer > p {
+	text-align: center;
+}
+
+a:link {
+	text-decoration: none;
+}
+
+.hm-btn {
+	border-radius: 0px;
+	background-color: ghostwhite;
+	border-color: darkgrey;
+	float: right;
+}
+
+.warning-message {
+	border-style: solid;
+	border-color: #D11A14 !important;
+	border-radius: 5px;
+	text-align: center;
+	color: #D11A14;
+}
+
+.border-bottom {
+		border-bottom: solid thin grey;
+	}
