--- a/web-site/main.css
+++ b/web-site/main.css
@@ -33,8 +33,8 @@ body {
 	.mobile {
 		display: none;
 	}
-  	.leftPane {
-	border-right: solid thin grey;
+	.leftPane {
+		border-right: solid thin grey;
 	}
 }
 
@@ -129,4 +129,8 @@ a:link {
 
 .border-bottom {
 		border-bottom: solid thin grey;
-	}
+}
+.home > div {
+	margin: 20px;
+	width: 90%;
+}
